get all room
