# src/app.ts
@@ -12,6 +12,7 @@ import openApiSpec from "./docs/openapi.json";
 import { errorHandler, notFoundHandler } from "./middlewares/error.middleware";
 import { authRoutes } from "./modules/auth/auth.routes";
 import { userRouters } from "./modules/user/user.routes";
+import { roomRouters } from "./modules/room/room.routes";
 
 const app: Application = express();
 
@@ -58,6 +59,7 @@ app.use(
 
 app.use("/api/v1/auth", authRoutes);
 app.use("/api/v1/users", userRouters);
+app.use("/api/v1/rooms", roomRouters);
 
 // Root route redirect to docs
 app.get("/", (_req: Request, res: Response) => {
